package western1.grammaire;

/**
 * Genre
 */
public interface Genre {
    String getArticleDef();
    String getArticleIndef();
    String getArticleParti();
}