@startuml

package western1{
    class Personnage{
        -m_nom : String
        +«create»Personnage(nom: String)
        +«create»Personnage(nom: String, Boisson boisson)
        +dire(phrase: String): String
        +sePresenter(): String
        +boire(): String
        +boire(boisson: Boisson): String
        +getNom(): String
    }

    class Boisson{
        -m_nom : String
        +«create»Boisson(nom: string, Genre: genre)
        +getNomAvecArticleDefini(): String
        +getNomAvecArticleIndefini(): String
        +getNomAvecArticlePartitif(): String
        +getNomAvecPreposition(): String
        -estVoyelle(lettre: String): boolean
        }

    package grammaire {
        class Masculin extends Genre{
            -m_articleDef: String
            -m_articleIndef: String
            -m_articleParti: String
            +«create»Masculin()
            +getArticleDef(): String
            +getArticleIndef(): String
            +getArticleParti(): String
        }
        class Feminin extends Genre{
            -m_articleDef: String
            -m_articleIndef: String
            -m_articleParti: String
            +«create»Feminin()
            +getArticleDef(): String
            +getArticleIndef(): String
            +getArticleParti(): String
        }

        interface Genre{
            getArticleDef(): String
            getArticleIndef(): String
            getArticleParti(): String
        }
    }
    Boisson "0..*" *---> "-m_genre\n1" Genre : Est 

    Personnage "0..*" *---> "-m_boissonFav\n1" Boisson : adore
}

package western2{
    class Narrateur{
        -m_histoire: String
        +«create»Narrateur()
        +ajouterLignes(phrase: String):
        +raconterHistoire():
    }
    
    class Dame extends Personnage{
        -m_libre: Boolean
        -m_loic: String
        -m_sauveur: String
        +«create»Dame(nom: String)
        +«create»Dame(nom: String, boisson: Boisson)
        +sePresenter():String
        +getNom(): String
        ~crier(brigrand: String): String
        ~remercier(cowboy: String): String
        +{static} setBoissonDef(boisson: Boisson):
    }

    class Brigand extends Personnage{
        -m_recompense: Integer
        -m_estLibre: Boolean
        -m_auteurCapture: String
        +«create»Brigand(nom: String, boissonFav: Boisson)
        +«create»Brigand(nom: String)
        +sePresenter():String
        +getNom(): String
        ~getNameDame(): String
        ~getRemercimentDame(nomCoboy: String): String
        ~estCapturer(cowboy: String): String
        +kidnapper(dame: Dame): String
        ~estViserPar(cowboy: String): String
        +getRecompense(): Integer
        +{static}setBoissonDef(boisson: Boisson):
    }

    class Cowboy extends Personnage{
        -m_argent: Integer
        -m_brigandCapturer: String[0..*]
        +sePresenter():String
        +«create»Cowboy(nom:String)
        +«create»Cowboy(nom: String, boissonFav: Boisson)
        +tirerSur(brigrand: Brigrand): String
        +capturer(brigrand: Brigrand): String
        +setBoissonDef(boisson: Boisson):
    }

    Brigand "1" o-> "m_dame\n0..*"Dame : kidnappe
    Brigand "0..*" *-> "{static}m_boissonDef\n1"Boisson: boisson par defaut
    Cowboy "0..*" *-> "{static}m_boissonDef\n1"Boisson: boisson par defaut
    Dame "0..*" *-> "{static}m_boissonDef\n1"Boisson: boisson par defaut
}
@enduml